Attempting to fix phone overflow

--- a/assets/source/scss/00-base/_reset.scss
+++ b/assets/source/scss/00-base/_reset.scss
@@ -7,6 +7,9 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  overflow: hidden;
   padding: 0;
+}
+
+body {
+  overflow: hidden;
 }
