--- a/assets/source/scss/02-layout/_main.scss
+++ b/assets/source/scss/02-layout/_main.scss
@@ -12,8 +12,7 @@ main {
     margin: 0;
     position: absolute;
     text-align: center;
-    top: 50%;
-    transform: translateY(-50%);
+    top: calc(50% - 100px);
     width: 100%;
   }
 }
